# Sandbox

./: .gitignore  CMakeLists.txt
ChatClient/: CMakeLists.txt  main.cpp
ChatServer/: CMakeLists.txt  main.cpp
Network/: CMakeLists.txt  SocketAddress.cpp  SocketAddress.h  SocketAddressFactory.cpp  SocketAddressFactory.h  SocketUtil.cpp  SocketUtil.h  StringUtils.cpp  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h  main.cpp
Replication/: CMakeLists.txt  main.cpp
Serialization/: ByteSwapper.h  CMakeLists.txt  InputMemoryBitStream.cpp  InputMemoryBitStream.h  InputMemoryStream.cpp  InputMemoryStream.h  LinkingContext.h  MemorySteam.cpp  MemorySteam.h  OutputMemoryBitStream.cpp  OutputMemoryBitStream.h  OutputMemoryStream.cpp  OutputMemoryStream.h  RoboCat.cpp  RoboCat.h  main.cpp
SerializeStream/: CMakeLists.txt  MemoryBitStream.cpp  MemoryBitStream.h  main.cpp
TestConsole/: CMakeLists.txt  Skelebob.cpp  Skelebob.h  main.cpp
WinSockBasic/: CMakeLists.txt  main.cpp
WinSockOOP/: CMakeLists.txt  main.cpp
